<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgStark"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/tony_stark" />

    <TextView
        android:id="@+id/txtLayoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/imgStark"
        android:padding="10dp"
        android:text="@string/stark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCharisma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayoutHeader"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/imgStark"
        android:padding="8dp"
        android:text="@string/bio"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCharisma"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/imgStark"
        android:text="@string/malibu_stark_co"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="#8C59B1"
        android:text="@string/log_out"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold" />


</RelativeLayout>